Fixed image in about page getting squished

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -355,6 +355,9 @@ section.home-container
 		margin: 0 auto $single-bottom-padding
 		border-radius: $border-radius
 
+		@media screen and (max-width: 767px)
+			width: auto
+
 	.-bio
 		text-align: left
 
